--- a/app/views/static_pages/advancedtechnology.html.erb
+++ b/app/views/static_pages/advancedtechnology.html.erb
@@ -7,13 +7,13 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span5">			
+				<div class="span6">			
 					<h3>Orthophos XG 5</h3>	
 				</div>
-				<div class="span7">
+				<div class="span6">
 					<%= image_tag 'orthophos.jpg' %>
 				</div>
 			</div>
@@ -31,13 +31,13 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span5">				
+				<div class="span8">				
 					<h3>USBCAM2 Intraoral Camera</h3>
 				</div>	
-				<div class="span7">
+				<div class="span4">
 					<%= image_tag 'usbcam.jpg' %>
 				</div>
 			</div>
@@ -53,13 +53,13 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span5">				
+				<div class="span8">				
 					<h3>Provecta 70 Intraoral X-Ray</h3>	
 				</div>
-				<div class="span7">
+				<div class="span4">
 					<%= image_tag 'xray.jpg' %>
 				</div>
 			</div>
@@ -74,13 +74,13 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span5">				
+				<div class="span8">				
 					<h3>Polus Whitening Accelerator</h3>
 				</div>
-				<div class="span7">
+				<div class="span4">
 					<%= image_tag 'whiteningmachine.jpg' %>
 				</div>
 			</div>
@@ -95,13 +95,13 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span5">					
+				<div class="span6">					
 					<h3>Cavitron Jet Plus</h3>
 				</div>
-				<div class="span7">
+				<div class="span6">
 					<%= image_tag 'jetplus.jpg' %>
 				</div>				
 			</div>
@@ -113,13 +113,13 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span5">					
+				<div class="span9">					
 					<h3>Odyssey Navigator Diode Laser</h3>
 				</div>
-				<div class="span7">
+				<div class="span3">
 					<%= image_tag 'diodelaser.jpg' %>
 				</div>				
 			</div>				
@@ -131,13 +131,13 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span5">				
+				<div class="span6">				
 					<h3>Eaglesoft</h3>
 				</div>
-				<div class="span7">
+				<div class="span6">
 					<%= image_tag 'eaglesoft.jpg' %>
 				</div>				
 			</div>							
@@ -149,13 +149,13 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span5">				
+				<div class="span9">				
 					<h3>Panasonic TC-L32C22 HDTV</h3>
 				</div>
-				<div class="span7">
+				<div class="span3">
 					<%= image_tag 'tv.jpg' %>
 				</div>				
 			</div>
