--- a/app/views/static_pages/athleticmouthguards.html.erb
+++ b/app/views/static_pages/athleticmouthguards.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>TLC Athletic Mouthguards</h3>
 			<div class="row-fluid">
@@ -9,24 +9,24 @@
 				</div>
 			</div>
 			<p>
-				The American Dental Association Council on Scientific Affairs reports that a properly fitted athletic mouthguard is the best protective device for reducing the incidence and severity of sports-related dental injuries to the teeth and soft tissues (mouth, lip, tongue, inner lining of cheeks).  It achieves this by providing a resilient, protective surface to distribute and dissipate forces on impact, thereby minimizing the severity of traumatic injury.
+				The American Dental Association Council on Scientific Affairs reports that a properly fitted athletic mouthguard is the best protective device for reducing the incidence and severity of sports-related dental injuries to the teeth and soft tissues (mouth, lip, tongue, inner lining of cheeks).  It achieves this by providing a resilient, protective surface to distribute and dissipate forces on impact, thereby minimizing the severity of traumatic injury.<br>
 			</p>
 			<p>
 				<b>Why Wear an Athletic Mouthguard</b><br>
 				The consequences of not wearing an athletic mouthguard in sports or any activity with dental injury risk are daunting:
+			</p>
 				<ul>
 					<li>Every athlete in a contact sport has a 10% chance each season of sustaining an orofacial injury.</li>
 					<li>Every athlete in a contact sport has a 33% to 56% chance of sustaining an orofacial injury during his/her athletic career</li>
 					<li>An athlete is 60 times more likely to sustain teeth damage when not wearing an athletic mouthguard.</li>
 				</ul>
-			</p>
 			<p>
 				<b>Who Should Wear an Athletic Mouthguard</b><br>
-				The American Dental Association recommends custom fitted athletic mouthguards for any sport or activity with dental injury risk.
+				The American Dental Association recommends custom fitted athletic mouthguards for any sport or activity with dental injury risk.<br>
 			</p>
 			<p>
 				<b>TLC Athletic Mouthguard vs. a Store Mouthguard</b><br>
-				Sporting Goods stores, drugstores, and webstores offer an array of “stock” and “boil and bite” athletic mouthguards.  They far surpass us in marketing.We far surpass them in oral protection.
+				Sporting Goods stores, drugstores, and webstores offer an array of “stock” and “boil and bite” athletic mouthguards.  They far surpass us in marketing.We far surpass them in oral protection.<br>
 			</p>
 			<ul>
 				<li>An athletic mouthguard that is not custom fitted provides only a low level of protection</li>
@@ -37,19 +37,19 @@
 				<li>TLC athletic mouthguards are custom fitted. Those offered by Sporting Goods stores, drugstores, and webstores are not.</li> 
 			</ul>
 			<p>
-				In sum, if you or a member of your family engage in any sport or activity with dental injury risk and desire optimum mouthguard protection you should promptly contact TLC Dental for a custom fitted athletic mouthguard.
+				In sum, if you or a member of your family engage in any sport or activity with dental injury risk and desire optimum mouthguard protection you should promptly contact TLC Dental for a custom fitted athletic mouthguard.<br>
 			</p>
 			<p>
 				<b>Custom Fitting a TLC Athletic Mouthguard</b><br>
-				To prepare your custom fitted athletic mouthguard we will carefully examine your teeth, gums, and soft tissues and will make a precise mold for your mouthguard that is then made to our exacting specifications by either Glidewell or Bite Tech dental laboratories.   Unlike one size fits all “stock” and “boil and bite” mouthguards, your TLC athletic mouthguard will fulfill all of the criteria of the Academy for Sports Dentistry in being custom fitted, comfortable, odorless, tasteless, optimally designed for speaking and breathing, properly layered for protection and durability, resilient, and retentive. 
+				To prepare your custom fitted athletic mouthguard we will carefully examine your teeth, gums, and soft tissues and will make a precise mold for your mouthguard that is then made to our exacting specifications by either Glidewell or Bite Tech dental laboratories.   Unlike one size fits all “stock” and “boil and bite” mouthguards, your TLC athletic mouthguard will fulfill all of the criteria of the Academy for Sports Dentistry in being custom fitted, comfortable, odorless, tasteless, optimally designed for speaking and breathing, properly layered for protection and durability, resilient, and retentive. <br>
 			</p>
 			<p>
 				<b>Durability</b><br>
-				Glidewell and Bite Tech employ the most advanced Multi-Layered Pressure Laminated technology to create your custom made TLC athletic to assure necessary thickness, protection and durability.
+				Glidewell and Bite Tech employ the most advanced Multi-Layered Pressure Laminated technology to create your custom made TLC athletic to assure necessary thickness, protection and durability.<br>
 			</p>
 			<p>
 				<b>More Information</b><br>
-				For more detailed descriptions of mouthguards, click on Dr. Rothenberg’s Dental Encyclopedia.  And to enjoy the advanced oralfacial protection of a custom fitted TLC athletic mouthguard please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684
+				For more detailed descriptions of mouthguards, click on Dr. Rothenberg’s Dental Encyclopedia.  And to enjoy the advanced oralfacial protection of a custom fitted TLC athletic mouthguard please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
 			</p>
 		</div>
 	</div>
