--- a/app/views/static_pages/cankersores.html.erb
+++ b/app/views/static_pages/cankersores.html.erb
@@ -1,10 +1,11 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Canker Sores</h3>
 			<p>
-				Canker sores are small, round, ulcerated sores that appear, often two or three at a time, on the inside of lips and cheeks and on tongues, palates, and gums. Although their cause is unknown, they often occur after tissue abrasions from braces or ill fitting dentures, tissue injuries such as bitten cheeks or lips, and ingestion of citric fruits.  They generally disappear without scars after two weeks but often return a few times each year.  They are not contagious and afflict only half of all people for whom they are merely a painful annoyance and do not require professional attention. <br><br>
-
+				Canker sores are small, round, ulcerated sores that appear, often two or three at a time, on the inside of lips and cheeks and on tongues, palates, and gums. Although their cause is unknown, they often occur after tissue abrasions from braces or ill fitting dentures, tissue injuries such as bitten cheeks or lips, and ingestion of citric fruits.  They generally disappear without scars after two weeks but often return a few times each year.  They are not contagious and afflict only half of all people for whom they are merely a painful annoyance and do not require professional attention.
+			</p>
+			<p>
 				In some instances, however, canker sores pose greater risk and professional assistance is necessary.  You should promptly see TLC Dental if
 				<%= image_tag 'wisdomtooth.jpg', :class => "float-right" %>	
 			</p>
@@ -17,10 +18,12 @@
 				<li>Rashes, joint pain, fever, or diarrhea accompany your canker sores</li>
 			</ul>
 			<p>	
-				We will carefully examine your canker sores and may provide you with prescription gels and/or creams that will mitigate their pain, deter their growth, and accelerate their healing.<br><br>
-
-				Throughout your examination and treatment you will enjoy the comfort of our signature “Gentle Dentistry.”<br><br>
-
+				We will carefully examine your canker sores and may provide you with prescription gels and/or creams that will mitigate their pain, deter their growth, and accelerate their healing.<br>
+			</p>
+			<p>
+				Throughout your examination and treatment you will enjoy the comfort of our signature “Gentle Dentistry.”<br>
+			</p>
+			<p>
 				For more information on canker sores click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg's Dental Dictionary  And for prompt examination and treatment of your canker sores, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.   
 			</p>									
 		</div>
