--- a/app/views/static_pages/chippedcrown.html.erb
+++ b/app/views/static_pages/chippedcrown.html.erb
@@ -1,11 +1,12 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Dislodged, Lost, or Significantly Chipped Crown</h3> 
 			<p>
 				<%= image_tag 'wisdomtooth.jpg', :class => "float-right" %>	
-				If a crown is dislodged, lost, or significantly chipped, the tooth should promptly be treated by TLC Dental to prevent infection and further damage.  If the crown is chipped and repairable, we will repair it.  If it is dislodged or lost, we will carefully examine and clean your tooth and effect any needed post and buildup restoration.  We then will clean and emplace a dislodged crown or provide the tooth with a temporary crown in place of a lost crown pending completion of a permanent replacement. Throughout your crown procedure you will enjoy the comfort of our signature “Gentle Dentistry.”   <br><br>
-
+				If a crown is dislodged, lost, or significantly chipped, the tooth should promptly be treated by TLC Dental to prevent infection and further damage.  If the crown is chipped and repairable, we will repair it.  If it is dislodged or lost, we will carefully examine and clean your tooth and effect any needed post and buildup restoration.  We then will clean and emplace a dislodged crown or provide the tooth with a temporary crown in place of a lost crown pending completion of a permanent replacement. Throughout your crown procedure you will enjoy the comfort of our signature “Gentle Dentistry.”<br>
+			</p>
+			<p>
 				For more information on crowns, click on Dr. Rothenberg's Dental Encyclopedia and Dr. Rothenberg's Dental Dictionary..  And for prompt treatment of a dislodged, lost, or significantly chipped crown, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
 			</p>								
 		</div>
