--- a/app/views/static_pages/crackedfilling.html.erb
+++ b/app/views/static_pages/crackedfilling.html.erb
@@ -1,13 +1,15 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<%= image_tag 'wisdomtooth.jpg', :class => "float-right" %>	
 			<h3>Cracked or Lost Filling</h3>
 			<p>
-				A cracked or lost filling renders your tooth vulnerable to decay and infection that may result in a root canal treatment or extraction if it is not immediately addressed.  To preserve your tooth, you should seek prompt treatment from TLC Dental.  We will carefully examine your tooth and protect it with a new filling.  <br><br>
-
-				During this restorative procedure you will enjoy the comfort of our signature “Gentle Dentistry.” <br><br>
-
+				A cracked or lost filling renders your tooth vulnerable to decay and infection that may result in a root canal treatment or extraction if it is not immediately addressed.  To preserve your tooth, you should seek prompt treatment from TLC Dental.  We will carefully examine your tooth and protect it with a new filling.  <br>
+			</p>
+			<p>
+				During this restorative procedure you will enjoy the comfort of our signature “Gentle Dentistry.” <br>
+			</p>
+			<p>
 				For more information on fillings, click on Dr. Rothenberg's Dental Encyclopedia and Dr. Rothenberg's Dental Dictionary..  And for prompt treatment of a cracked or lost filling, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
 			</p>								
 		</div>
