--- a/app/views/static_pages/dentures.html.erb
+++ b/app/views/static_pages/dentures.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Dentures</h3> 
 			<p>
@@ -20,54 +20,61 @@
 			</ul>
 
 			<p>
-				<b>Denture Procedure</b>
+				<b>Denture Procedure</b><br>
 				Dentures are a several step procedure. In your first denture appointment at TLC we will ask you to describe your denture goals and we will then review the options of a full or partial denture and those of a conventional or immediate denture. We also will review the options for dental retention such as natural suction, dental adhesives, implant posts, or fasteners.
 			</p>
-				<b>Full Denture</b>
+			<p>
+				<b>Full Denture</b><br>
 				A full upper denture covers the palate or top of the mouth and is contoured in color and shape to match your gums over which it fits. A full lower denture of similar color fits over the gums and is hsaped like a horseshoe to accommodate the tongue.<br>
-
+			</p>
+			<p>
 				A popular type of full denture is the “TLC Snap-In Denture” or over-denture with snap-in retention. They are full upper and lower dentures secured wholly by implants and fasterners to which they simply snap in and off. <br>
-
+			</p>
+			<p>
 				TLC Dental draws on art and technology to create a full denture that reflects your uniqueness and distinctive appearance as well as your sense of comfort in eating, speaking, and smiling.  We begin by taking a precise impression and detailed measurements of both the upper and lower parts of your mouth that we use to form a wax model of your denture.<br>
-
+			</p>
+			<p>
 				This “Try-in Denture” becomes a model for your desired look and feel.  You can choose from our vast palette of shapes, sizes, and colors to create the components of your Dream Smile and try it “in” for look and feel. Your dream then comes true when a highly specialized laboratory, in accordance with our exacting specifications, transforms the detailed model into your unique dentures.<br>
-
-				The next step of your denture preparation is an essential one of emplacement, a process that may be facilitated by implant posts or fasteners.  Once in place, and particularly in the initial period of denture use, Dr. Rothenberg and his experienced staff will work with you in fine tuning and adjusting your dentures for optimum comfort in eating, speaking, and smiling.
+			</p>
+			<p>
+				The next step of your denture preparation is an essential one of emplacement, a process that may be facilitated by implant posts or fasteners.  Once in place, and particularly in the initial period of denture use, Dr. Rothenberg and his experienced staff will work with you in fine tuning and adjusting your dentures for optimum comfort in eating, speaking, and smiling.<br>
 			</p>			
 			<p>
-				<b>Removable Partial Denture</b>
+				<b>Removable Partial Denture</b><br>
 				A removable partial denture, also called a removable bridge, comes in many forms. A traditional type contains metal and contains metal and consists of a gum color acrylic base to which one or more prostehtic teeth are affixed.<br>
-
+			</p>
+			<p>
 				Another type is a flexi partial denture that is more popular because it does not contain metal. Its gums colored vinyl base has calsps that attach to your existing teeth and its flexibility enables a comfortable adjustment to the contours of the mouth. <br>
-
-				Just as with a full denture, we take a detailed impression of the area of your missing teeth for a “Try-In Partial” for which you may choose the aesthetic elements. A highly specialized laboratory then draws on our precise measurements to create your removable partile denture.
+			</p>
+			<p>
+				Just as with a full denture, we take a detailed impression of the area of your missing teeth for a “Try-In Partial” for which you may choose the aesthetic elements. A highly specialized laboratory then draws on our precise measurements to create your removable partile denture.<br>
 			</p>			
 			<p>
-				<b>Emplacement</b>
+				<b>Emplacement</b><br>
 				The final and essential step of your denture preparation is emplacement and adjustment. Once in place, and particularly in the initial period of denture use, Dr. Rothenberg and his experienced staff will work with you in fine tuning and adjusting your denture for optimum comfort in eating, speaking and smilling. 
 			</p>	
 			<p>
-				<b>Denture Support</b>
+				<b>Denture Support</b><br>
 				TLC provides you with lifelong denture support.  With your dentures you receive a TLC Denture Acclimation booklet tthis process, for suitable periods of wear and removal, for use of adhesives, for care, and for cleaning.  And with regular examinations, TLC will maintain your dentures for continued use, comfort, and confidence.  
 			</p>					
 			<p>
-				<b>Gentle Comfort</b>
+				<b>Gentle Comfort</b><br>
 				In the preparation, emplacement, and use of your dentures, you will enjoy the comfort of our signature “Gentle Dentistry.”
 			</p>			
 			<p>
-				<b>Denture Composition</b>
+				<b>Denture Composition</b><br>
 				The gum segment of a denture is made of durable acrylic and the teeth of ceramic material or high grade porcelain.
 			</p>			
 			<p>
-				<b>Denture Durability</b>
+				<b>Denture Durability</b><br>
 				The durability of a denture is largely dependent on good oral hygiene, proper care of the denture, and regular dental checkups including an annual oral cancer examination.  With proper care, dentures may last for many years. 
 			</p>
 			<p>
-				<b>Denture Appearance</b>
+				<b>Denture Appearance</b><br>
 				In its creation, use, and appearance your denture will reflect our motto “The Art of Gentle Dentistry.”  We provide for your comfort in the procedure and for your dental health in a completely functional set of teeth.  And in providing perfect shape and color to your dentures, we deliver your “Dream Smile.”
 			</p>
 			<p>
-				<b>More Information</b>
+				<b>More Information</b><br>
 				For more detailed descriptions of bonding, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg’s Dental Dictionary.  To learn if you might benefit from bonding, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
 			</p>			
 		</div>
