--- a/app/views/static_pages/drymouth.html.erb
+++ b/app/views/static_pages/drymouth.html.erb
@@ -1,10 +1,11 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Dry Mouth</h3>
 			<p>
-				Everyone’s mouth feels dry from time to time in moments such as excessive thirst or anxiety but this should not be confused with dry mouth (Xerostomia), a condition in which the salivary glands fail regularly to produce sufficient saliva.  It has multiple causes including more than 400 medicines that adversely affect the salivary glands; several diseases including diabetes, high blood pressure, Parkinsons; HIV/AIDS, and Sjorgren’s Syndrome; radiation therapy; chemotherapy; and head and neck nerve damage.<br><br>
-
+				Everyone’s mouth feels dry from time to time in moments such as excessive thirst or anxiety but this should not be confused with dry mouth (Xerostomia), a condition in which the salivary glands fail regularly to produce sufficient saliva.  It has multiple causes including more than 400 medicines that adversely affect the salivary glands; several diseases including diabetes, high blood pressure, Parkinsons; HIV/AIDS, and Sjorgren’s Syndrome; radiation therapy; chemotherapy; and head and neck nerve damage.<br>
+			</p>
+			<p>
 				Dry mouth is a serious health risk because saliva keeps the mouth wet; prevents decay, abscesses, and infections by controlling oral bacteria and fungi; enables tasting, chewing, and swallowing; and facilitates speaking and digestion.<br><br>
 			</p>
 			<%= image_tag 'wisdomtooth.jpg', :class => "float-right" %>	
@@ -20,12 +21,15 @@
 				<li>Cracked lips</li>
 			</ul>
 			<p>	
-				If you experience any of these symptoms you should see TLC Dental for immediate diagnosis and treatment.<br><br>
-
-				To establish its cause, we will review your medical history and symptoms.  We also will carefully examine your mouth and salivary glands.  We then will provide you with appropriate treatment such as artificial saliva, specialized gums, lozenges, and medicine that increases saliva production as well as instruct you on ways to personally mitigate dry mouth.<br><br>
-
-				Throughout your examination and treatment you will enjoy the comfort of our signature “Gentle Dentistry.”<br><br>  
-
+				If you experience any of these symptoms you should see TLC Dental for immediate diagnosis and treatment.<br>
+			</p>
+			<p>
+				To establish its cause, we will review your medical history and symptoms.  We also will carefully examine your mouth and salivary glands.  We then will provide you with appropriate treatment such as artificial saliva, specialized gums, lozenges, and medicine that increases saliva production as well as instruct you on ways to personally mitigate dry mouth.<br>
+			</p>
+			<p>
+				Throughout your examination and treatment you will enjoy the comfort of our signature “Gentle Dentistry.”<br>
+			</p>
+			<p>
 				For more information on dry mouth (Xerostomia) click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg's Dental Dictionary. And for prompt diagnosis and treatment of your dry mouth, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.   
 			</p>									
 		</div>
