--- a/app/views/static_pages/headache.html.erb
+++ b/app/views/static_pages/headache.html.erb
@@ -1,7 +1,7 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
-			<h3>Headache</h3>
+			<h3>Headaches</h3>
 			<p>
 				A mild, occasional headache is generally not of medical concern.  However, regular and chronic headaches are of serious concern and may be oral and dental related.  Headaches may be directly or indirectly caused or exacerbated by the following dental conditions:
 			</p>
@@ -23,12 +23,13 @@
 				<li>Ill-fitting braces</li>
 			</ul>
 			<p>	
-				If you experience regular and chronic headaches, it is important that you seek prompt treatment from TLC Dental. We will review your medical history and will conduct a thorough examination to determine the cause of your headaches.  We will then treat the cause to relieve your headache pain and restore your dental health.<br><br>  
- 
-				Throughout your examination and treatment you will enjoy the comfort of our signature “Gentle Dentistry.”<br><br>   
-
+				If you experience regular and chronic headaches, it is important that you seek prompt treatment from TLC Dental. We will review your medical history and will conduct a thorough examination to determine the cause of your headaches.  We will then treat the cause to relieve your headache pain and restore your dental health.<br>
+ 			</p>
+ 			<p>
+				Throughout your examination and treatment you will enjoy the comfort of our signature “Gentle Dentistry.”<br>
+			</p>
+			<p>
 				For more information on oral and dental related headaches, click on Dr. Rothenberg’s Dental Encyclopedia  and Dr. Rothenberg's Dental Dictionary. And for prompt treatment and alleviation of these headaches, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
-   
 			</p>									
 		</div>
 	</div>
