--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,7 +9,7 @@
 <div class="welcome-text">
 	<div class="row-fluid">
 		<div class="span12">
-			<h3 style="text-decoration:underline">Welcome to TLC</h3><h4>TLC is many facets of care.</h4>
+			<i><h3 style="text-decoration:underline">Welcome to TLC Dental Group</h3><h5>TLC is many facets of care.</h5></i>
 		</div>
 	</div>
 <div id="left-welcome">
