--- a/app/views/static_pages/preventivedentalcleaning.html.erb
+++ b/app/views/static_pages/preventivedentalcleaning.html.erb
@@ -1,10 +1,10 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Professional Dental Cleaning</h3>
 			<%= image_tag 'recaretooth.jpg', :class => "float-right" %>
 			<p>
-				A Professional Dental Cleaning or “Recare” figures prominently in Dream Smile Solutions, Common Dental Problems, and Preventive Dentistry.  It is in many ways the copestone of our collective dental treatments and is fundamental to achieving and maintaining your “Dream Smile”.  For details on Recare click here.
+				A Professional Dental Cleaning or “Recare” figures prominently in Dream Smile Solutions, Common Dental Problems, and Preventive Dentistry.  It is in many ways the copestone of our collective dental treatments and is fundamental to achieving and maintaining your “Dream Smile”.  For details on Recare click here.<br>
 			</p>
 			<p>
 				<b>More Information</b><br>
