--- a/app/views/static_pages/rootcanal.html.erb
+++ b/app/views/static_pages/rootcanal.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Root Canal</h3>
 			<p>
@@ -15,10 +15,12 @@
 				<li>It is broken</li>
 			</ul>
 			<p>	
-				Should you experience any of these symptoms, it is important that you promptly seek treatment from TLC Dental. We will carefully examine your tooth and gums and determine whether a root canal treatment would be the most appropriate treatment for the tooth.  If our tests are affirmative, we would provide for the above procedure and at its conclusion emplace either a filling or a crown on the tooth to secure its future health.<br><br>
-
-				Although root canals have long had a foreboding image, you will experience only relief as you enjoy the comfort of our signature “Gentle Dentistry.”<br><br>
-
+				Should you experience any of these symptoms, it is important that you promptly seek treatment from TLC Dental. We will carefully examine your tooth and gums and determine whether a root canal treatment would be the most appropriate treatment for the tooth.  If our tests are affirmative, we would provide for the above procedure and at its conclusion emplace either a filling or a crown on the tooth to secure its future health.<br>
+			</p>
+			<p>
+				Although root canals have long had a foreboding image, you will experience only relief as you enjoy the comfort of our signature “Gentle Dentistry.”<br>
+			</p>
+			<p>
 				For more information on root canals, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg's Dental Dictionary..  And for prompt alleviation and treatment of root canal symptoms, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.   
 			</p>									
 		</div>
