--- a/app/views/static_pages/sealants.html.erb
+++ b/app/views/static_pages/sealants.html.erb
@@ -1,36 +1,36 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Sealants</h3>
 			<p>
-				Sealants are thin resinous films or coatings that are brushed on the chewing surfaces of back teeth to protect them from decay.  
+				Sealants are thin resinous films or coatings that are brushed on the chewing surfaces of back teeth to protect them from decay.<br> 
 			</p>
 			<p>
 				<b>Importance</b><br>
-				Tooth decay, particularly in children is fraught with problems. When it occurs it must be removed and a filling restoration emplaced that unfortunately holds future complications.  Studies show that filling restored teeth of children will generally fracture by the age of 35 and then require root canal treatments, crowns, or extractions.
+				Tooth decay, particularly in children is fraught with problems. When it occurs it must be removed and a filling restoration emplaced that unfortunately holds future complications.  Studies show that filling restored teeth of children will generally fracture by the age of 35 and then require root canal treatments, crowns, or extractions.<br>
 			</p>
 			<p>
-				Sealant protection is essential because the pits and fissures of molars and premolars are often narrower than a toothbrush bristle and are difficult to clean.  Indeed, without sealants, the average person has a 95% chance of experiencing a cavity in these teeth and little chance of experiencing a cavity with intact sealants.
+				Sealant protection is essential because the pits and fissures of molars and premolars are often narrower than a toothbrush bristle and are difficult to clean.  Indeed, without sealants, the average person has a 95% chance of experiencing a cavity in these teeth and little chance of experiencing a cavity with intact sealants.<br>
 			</p>
 			<p>
-				As the chewing surface of children’s teeth is most susceptible to decay, sealants should be applied to newly erupted permanent teeth and in some cases to primary teeth.   Although critical for children, the preventative benefits of sealants extend to people of all ages.  
+				As the chewing surface of children’s teeth is most susceptible to decay, sealants should be applied to newly erupted permanent teeth and in some cases to primary teeth.   Although critical for children, the preventative benefits of sealants extend to people of all ages.<br>  
 			</p>
 			<p>
-				If your molar and pre-molar teeth are presently free of decay and fillings, you should insure their continued health and appearance by promptly contacting TLC Dental for sealant protection.
+				If your molar and pre-molar teeth are presently free of decay and fillings, you should insure their continued health and appearance by promptly contacting TLC Dental for sealant protection.<br>
 			</p>
 			<%= image_tag 'sealants.jpg', :class => "float-right" %>	
 			<p>
 				<b>Treatment</b><br>
-				Sealing teeth is a short and simple procedure.  First, we thoroughly clean your tooth and apply a preparatory solution that facilitates sealant adhesion.  When the tooth is clean and dry, we meticulously brush a thin film of sealant on the tooth’s surface and then harden it with a curing light.  The entire process is completed in a matter of minutes.
+				Sealing teeth is a short and simple procedure.  First, we thoroughly clean your tooth and apply a preparatory solution that facilitates sealant adhesion.  When the tooth is clean and dry, we meticulously brush a thin film of sealant on the tooth’s surface and then harden it with a curing light.  The entire process is completed in a matter of minutes.<br>
 			</p>
 			<p>
 
 				<b>Gentle Comfort</b><br>
-				In the preparation and application of your sealant, you will enjoy the comfort of our signature “Gentle Dentistry.”
+				In the preparation and application of your sealant, you will enjoy the comfort of our signature “Gentle Dentistry.”<br>
 			</p>
 			<p>
 				<b>Sealant Durability</b><br>
-				Sealants are very durable and normally last for many years. Their condition is carefully monitored by TLC hygienists during biannual Professional Dental Cleanings and if infractions are detected, they reapply the sealant and resecure the tooth.
+				Sealants are very durable and normally last for many years. Their condition is carefully monitored by TLC hygienists during biannual Professional Dental Cleanings and if infractions are detected, they reapply the sealant and resecure the tooth.<br>
 			</p>
 			<p>
 				<b>More Information</b><br>
