--- a/app/views/static_pages/staff.html.erb
+++ b/app/views/static_pages/staff.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="content-container">
 			<div class="row-fluid">
 				<div class="span12">
@@ -42,7 +42,7 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="content-container">
 			<div class="row-fluid">
 				<div class="span12">			
@@ -77,7 +77,7 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="content-container">
 			<div class="row-fluid">
 				<div class="span12">			
@@ -112,7 +112,7 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="content-container">
 			<div class="row-fluid">
 				<div class="span12">			
@@ -134,7 +134,7 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="content-container">
 			<div class="row-fluid">
 				<div class="span12">			
@@ -156,7 +156,7 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="content-container">
 			<div class="row-fluid">
 				<div class="span12">			
@@ -178,7 +178,7 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="content-container">
 			<div class="row-fluid">
 				<div class="span12">			
@@ -200,7 +200,7 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="content-container">
 			<div class="row-fluid">
 				<div class="span12">			 
@@ -222,7 +222,7 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="content-container">
 			<div class="row-fluid">
 				<div class="span12">			
@@ -244,11 +244,14 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="content-container" style="display:block;">
-			<h3>The TLC Tooth</h3>
+			<h3>The Mighty Moler</h3>
 			<table>
-				<tr>
+				<tr>	
+					<td rowspan="12">
+						<%= image_tag 'mightymolar.jpg' %>
+					</td>
 					<td>Birthplace:</td>
 					<td>Gumville</td>
 				</tr>		
@@ -302,11 +305,15 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="content-container">
 			<h3>Flossie</h3>
 			<table>
+
 				<tr>
+					<td rowspan="11">
+						<%= image_tag 'flossy.jpg' %>
+					</td>
 					<td>Birthplace:</td>
 					<td>Frank Baum Kennels in Chittenango. Toto VII was my best friend there</td>
 				</tr>		
@@ -356,7 +363,7 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="content-container">
 			<h3>The Cowardly Lion</h3>
 			<p>
@@ -373,19 +380,28 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="content-container">
-			<h3>The Wisdom Tooth</h3>
-			<p>
-				Unbeknownst to most people, I have a library in the TLC Dental Group office building where I bide my time expanding my vast wisdom and honing my keen wit.  However, I'll say no more about myself for, as the senior member of the TLC Dental staff, I fittingly have my own web site, thewisdomtooth.com, where you will find my Autobiography, my Daily Words of Wit and Wisdom, and my Dental Gazette.<br>
-			</p>
-			<p>
-				I would be delighted to have you visit my website, where I will cordially greet you in my library, offer you a glass of sherry, and engage you in a discussion both edifying and diverting.<br>
-			</p>
-			<p>
-			Vivat Scientia,<br>
-			The Wisdom Tooth
-			</p>				
+			<div class="row-fluid">
+				<div class="span12">
+					<h3>The Wisdom Tooth</h3>
+				</div>
+			</div>
+			<div class="row-fluid">
+				<div class="span12">
+					<%= image_tag 'wisdomtooth_staff.jpg', :class => "float-left" %>
+					<p style="margin-top:50px;">
+						Unbeknownst to most people, I have a library in the TLC Dental Group office building where I bide my time expanding my vast wisdom and honing my keen wit.  However, I'll say no more about myself for, as the senior member of the TLC Dental staff, I fittingly have my own web site, thewisdomtooth.com, where you will find my Autobiography, my Daily Words of Wit and Wisdom, and my Dental Gazette.<br>
+					</p>
+					<p>
+						I would be delighted to have you visit my website, where I will cordially greet you in my library, offer you a glass of sherry, and engage you in a discussion both edifying and diverting.<br>
+					</p>
+					<p>
+						Vivat Scientia,<br>
+						The Wisdom Tooth
+					</p>
+				</div>
+			</div>				
 		</div>
 	</div>
 </div>
