--- a/app/views/static_pages/whitening.html.erb
+++ b/app/views/static_pages/whitening.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Whitening</h3>
 			<p>
@@ -24,7 +24,8 @@
 			<b>Whitening with the Polus Whitening Accelerator </b><br>
 			<p>
 				If the examination is favorable for whitening, we roll out the Polus Whitening Accelerator by Beyond Dental, the ultimate in tooth whitening technology.  Its distinctive LightBridge system combines halogen and LED light sources for superior whitening power while advanced filtration ensures your safety by removing all harmful heat and ultraviolet output.  Three flexible settings tailor the treatment to your tooth sensitivity level and a detachable LED curing light enables spot whitening of a single tooth.<br>
-
+			</p>
+			<p>
 				A Polus Whitening Treatment consists of three safe and successive 10 minute sessions.  It begins with a hygienic cleaning and polishing of your teeth. This is followed by setting the Polus for your tooth sensitivity level, securing your gum and lip tissue with a protective gel, and then applying a specially formulated whitening gel to your teeth that is activated by the Polus LightBridge system. After each of the first two sessions we remove and then reapply the whitening gell.  We monitor your three 10 minute sessions while you relax and watch a selection of your choice on a Pansonic HDTV and while your stains and discoloration dissolve into a “Dream Smile”.  
 			</p>												
 			<p>
@@ -37,15 +38,10 @@
 			</p>
 			<ul>
 				<li>90% of TLC tooth whitening procedures are successful.  Drugstore whitening success is questionable.</li>
-
 				<li>TLC carefully determines the optimum gel calibration, ranging from 20% to 45%, for each patient.  Drugstore gel is a one-size-fits-all 3%.</li>
-
 				<li>TLC tooth whitening can lighten teeth by 3 to 8 shades; drugstore whitening by 1 shade.</li>
-
 				<li>The results of one 30 minute TLC Polus whitening treatment far surpass those of drugstore whitening products lasting weeks or months.</li>
-
 				<li>TLC whitening will not jeopardize your health.  Our thorough dental exam disqualifies from treatment those patients whose health would be at risk including patients with cavities, cracked fillings, unduly thin enamel, active gum disease, exposed roots, allergy to peroxide, and patients who are under suitable age, pregnant or lactating.  Drugstore whitening products do not examine you for these risks and can be harmful to your health.</li>
-
 				<li>We custom fit your whitening trays or mouthpiece to maximize gel exposure to your teeth and minimize any exposure to your gums and soft tissue.  Drugstores offer ill-fitting, “one-size fits all” trays that allow bleaching gel to seep into and inflame gums and soft tissue.</li>
 			</ul>	
 			<p>
