--- a/app/views/static_pages/amenities.html.erb
+++ b/app/views/static_pages/amenities.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span8 offset2">
 		<div class="content-container">
 			<p>
 				You are first aware of the distinctiveness of the TLC Dental group when you are heralded by our landmark toothbrush mailbox. As you drive into our equally unique courtyard and its seasonal landscaping, you already enjoy a sense of well being.<br> 
