--- a/app/views/static_pages/badbreath.html.erb
+++ b/app/views/static_pages/badbreath.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Bad Breath</h3>
 			<p>
@@ -16,9 +16,11 @@
 			</ul>
 			<p>	
 				To establish its cause, we will review your medical history, diet, personal habits, and symptoms.  We also will carefully examine your teeth, gums, mouth, and salivary glands.  We then will provide you with appropriate treatment or refer you to a physician for further testing.<br>
-
+			</p>
+			<p>
 				Throughout your examination and treatment you will enjoy the comfort of our signature “Gentle Dentistry.”<br>
-
+			</p>
+			<p>
 				For more information on bad breath (halitosis) click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg's Dental Dictionary.  And for prompt diagnosis and treatment of your bad breath, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.    
 			</p>									
 		</div>
