--- a/app/views/static_pages/bonding.html.erb
+++ b/app/views/static_pages/bonding.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Bonding</h3> 
 			<p>
@@ -20,27 +20,27 @@
 			</ul>
 
 			<p>
-				<b>Bonding Procedure</b>
+				<b>Bonding Procedure</b><br>
 				For more than a quarter of a century our calling card has been “We cater to dental cowards” and over this time our founder, Dr. Rothenberg, has set the Syracuse benchmark for gentle dentistry. Today, TLC draws on an array of resources to assure your dental comfort.
 			</p>
 			<p>
-				<b>Gentle Comfort</b>
+				<b>Gentle Comfort</b><br>
 				Throughout your bonding procedure, you will enjoy the comfort of our signature “Gentle Dentistry.”
 			</p>
 			<p>
-				<b>Bonding Composition</b>
+				<b>Bonding Composition</b><br>
 				The TLC bonding procedure is done with a modern composite resin that, when cured, is noted for its luster, hardness, and durability.
 			</p>
 			<p>
-				<b>Bonding Durability</b>
+				<b>Bonding Durability</b><br>
 				The durability of a bonded tooth is largely dependent on good dental hygiene and regular dental checkups to militate against staining.  With proper care, bonding may last for many years.
 			</p>
 			<p>
-				<b>Bonding Appearance</b>
+				<b>Bonding Appearance</b><br>
 				In its creation, emplacement, and ultimate appearance your bonding will reflect our motto “The Art of Gentle Dentistry.”  We provide for your comfort in the procedure and for your dental health in sound and functional bonding.  And in artfully shaping, coloring, and polishing your bonding, we provide truly resplendent additions to your “Dream Smile.”
 			</p>
 			<p>
-				<b>More Information</b>
+				<b>More Information</b><br>
 				For more detailed descriptions of bonding, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg’s Dental Dictionary.  To learn if you might benefit from bonding, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
 			</p>			
 		</div>
