--- a/app/views/static_pages/bridges.html.erb
+++ b/app/views/static_pages/bridges.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Bridges</h3> 
 			<p>
@@ -20,29 +20,30 @@
 			</ul>
 
 			<p>
-				<b>Bridge Procedure</b>
+				<b>Bridge Procedure</b><br>
 				In your first visit to TLC Dental, we carefully examine and clean the area of your missing tooth or teeth. We review the types of bridges and determine which one would best meet your dental needs.  We then take exacting measurements and molds to fit you with a temporary bridge while the permanent bridge is prepared to our specifications by a highly specialized laboratory. <br>
-
-				In your second visit, TLC Dental removes the temporary bridge and adjusts the permanent bridge for optimal comfort, chewing, and appearance.  Your enviable bridge is then either permanently emplaced or, if needed, returned to the laboratory for final refinements before permanent emplacement
 			</p>
 			<p>
-				<b>Gentle Comfort</b>
+				In your second visit, TLC Dental removes the temporary bridge and adjusts the permanent bridge for optimal comfort, chewing, and appearance.  Your enviable bridge is then either permanently emplaced or, if needed, returned to the laboratory for final refinements before permanent emplacement<br>
+			</p>
+			<p>
+				<b>Gentle Comfort</b><br>
 				In the preparation and emplacement of your bridge, you will enjoy the comfort of our signature “Gentle Dentistry.”
 			</p>
 			<p>
-				<b>Bridge Composition</b>
+				<b>Bridge Composition</b><br>
 				TLC Dental bridges may be ceramic variants such as empress, cerenate, etc., a metal alloy such as gold, high grade porcelain, or high grade porcelain fused to a metal alloy.  The choice of composition is based on the location of the tooth and attendant dental and aesthetic considerations
 			</p>
 			<p>
-				<b>Bridge Durability</b>
+				<b>Bridge Durability</b><br>
 				The durability of a bridge, just like that of a normal tooth, is largely dependent on good dental hygiene and regular dental checkups.  With proper care, bridges may last for many years. 
 			</p>
 			<p>
-				<b>Bridge Appearance</b>
+				<b>Bridge Appearance</b><br>
 				In its creation, emplacement, and ultimate appearance your bridge  reflects our motto “The Art of Gentle Dentistry.”  We provide for your comfort in the procedure and for your dental health in a completely functional replacement tooth or teeth.  And in artfully shaping and color- matching your bridge, we provide a truly resplendent addition to your “Dream Smile.”
 			</p>
 			<p>
-				<b>More Information</b>
+				<b>More Information</b><br>
 				For more detailed descriptions of bonding, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg’s Dental Dictionary.  To learn if you might benefit from bonding, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
 			</p>			
 		</div>
