--- a/app/views/static_pages/brokentooth.html.erb
+++ b/app/views/static_pages/brokentooth.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Fractured or Broken Tooth</h3>
 			<%= image_tag 'wisdomtooth.jpg', :class => "float-right" %>	
@@ -15,12 +15,15 @@
 				<li>Decay Induced Break</li>
 			</ul>
 			<p>	
-				Fractured and broken teeth, regardless of cause and severity, should immediately be addressed by TLC.  We will provide you with instruction on immediate care of the tooth and upon arrival at our office we will carefully examine the tooth infraction and offer options for an appropriate restorative procedure.<br><br>  
-
-				Throughout this treatment you will enjoy the comfort of our signature “Gentle Dentistry."<br><br>  
-
-				For more information on fractured or broken teeth, click on Dr. Rothenberg’s Dental Encyclopedia.  And for prompt treatment and alleviation of these conditions, please call the TLC Dental Group Fayetteville / Manlius office at 315-637-7684.<br><br>  
-				 
+				Fractured and broken teeth, regardless of cause and severity, should immediately be addressed by TLC.  We will provide you with instruction on immediate care of the tooth and upon arrival at our office we will carefully examine the tooth infraction and offer options for an appropriate restorative procedure.<br>
+			</p>
+			<p>
+				Throughout this treatment you will enjoy the comfort of our signature “Gentle Dentistry."<br>
+			</p>
+			<p>
+				For more information on fractured or broken teeth, click on Dr. Rothenberg’s Dental Encyclopedia.  And for prompt treatment and alleviation of these conditions, please call the TLC Dental Group Fayetteville / Manlius office at 315-637-7684.<br>
+			</p>
+			<p>
 				For more information on fractured or broken teeth, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg's Dental Dictionary.  And for prompt treatment and alleviation of these conditions, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
 			</p>									
 		</div>
