--- a/app/views/static_pages/cleaning.html.erb
+++ b/app/views/static_pages/cleaning.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Cleaning</h3> 
 			<p>
@@ -41,19 +41,19 @@
 				<li>Recommend and schedule future treatments</li>
 			</ul>			
 			<p>
-				<b>Gentle Comfort</b>
+				<b>Gentle Comfort</b><br>
 				Throughout your “Recare” (Professional Dental Cleaning) you will enjoy the comfort of our signature “Gentle Dentistry.” 
 			</p>
 			<p>
-				<b>“Recare” Durability</b>
+				<b>“Recare” Durability</b><br>
 				A biannual or, if needed, a more frequent “Recare” is essential to achieve and maintain your lifelong “Dream Smile”.
 			</p>
 			<p>
-				<b>Bridge Appearance</b>
+				<b>Bridge Appearance</b><br>
 				A biannual “Recare” is expressive of our dictum “Dream Smiles for Life.”  Throughout the procedure we provide for your comfort and your continued dental health. After an hour of gentle care and cleaning, you enjoy a renewed and gleaming “Dream Smile”.
 			</p>
 			<p>
-				<b>More Information</b>
+				<b>More Information</b><br>
 				For more detailed descriptions of bonding, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg’s Dental Dictionary.  To learn if you might benefit from bonding, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
 			</p>			
 		</div>
