--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,13 +1,13 @@
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
-			Staff
+			Contact Us
 		</div>
 	</div>
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="content-container" style="display:block;">
 			<%= image_tag 'pocketwatch.jpg', :class => "float-right" %>	
 			<h3>Office Hours</h3>			
@@ -27,7 +27,7 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="content-container">
 			<%= image_tag 'cellphone.jpg', :class => "float-right" %>	
 			<h3>Phone</h3>			
@@ -45,7 +45,7 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="content-container">
 			<%= image_tag 'emergency.jpg', :class => "float-right" %>	
 			<h3>Emergencies</h3>			
@@ -63,7 +63,7 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Email Appointment</h3>
 			<p>
@@ -117,7 +117,7 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="content-container">
 			<%= image_tag 'TLC_logo.jpg', :class => "float-right" %>	
 			<h3>Office Address</h3>			
@@ -133,7 +133,7 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="content-container">	
 			<h3>Directions</h3>	
 			<div class="row-fluid" style="text-align:center;">
@@ -151,17 +151,17 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="content-container">
 			<h3>Arrival Welcome</h3>			
-				<p>
-					The Toothbrush Mailbox and the entire staff of the TLC Dental Group look forward to greeting current and future members of our family of patients.
-				</p>
-				<div class="row-fluid" style="text-align:center;">
-					<div class="span12">
-						<%= image_tag 'tbm_beacon.jpg' %>
-					</div>
+			<p>
+				The Toothbrush Mailbox and the entire staff of the TLC Dental Group look forward to greeting current and future members of our family of patients.
+			</p>
+			<div class="row-fluid" style="text-align:center;">
+				<div class="span12">
+					<%= image_tag 'tbm_beacon.jpg' %>
 				</div>
+			</div>
 		</div>
 	</div>
 </div>
