--- a/app/views/static_pages/crowns.html.erb
+++ b/app/views/static_pages/crowns.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Crowns</h3> 
 			<p>
@@ -18,27 +18,27 @@
 			</ul>
 
 			<p>
-				<b>Crown Procedure</b>
+				<b>Crown Procedure</b><br>
 				At TLC Dental we carefully examine and clean your tooth, precisely prepare and measure it for a crown, and when your permanent crown is completed to our exacting specifications, we adjust it for optimal comfort, chewing, and appearance and then cement your now enviable crown in permanent place.
 			</p>
 			<p>
-				<b>Gentle Comfort</b>
+				<b>Gentle Comfort</b><br>
 				In the preparation and emplacement of your crown, you will enjoy the comfort of our signature “Gentle Dentistry”.
 			</p>
 			<p>
-				<b>Crown Composition</b>
+				<b>Crown Composition</b><br>
 				TLC Dental crowns may be of ceramic variants such as empress, cerenate, etc, a metal alloy such as gold, high grade porcelain, or high grade porcelain fused to a metal alloy.  The choice of composition is based on the location of the tooth and attendant dental and aesthetic considerations
 			</p>			
 			<p>
-				<b>Crown Durability</b>
+				<b>Crown Durability</b><br>
 				The durability of a crown, just like that of a normal tooth, is largely dependent on good dental hygiene and regular dental checkups.  With proper care, crowns may last for many years.  
 			</p>
 			<p>
-				<b>Crown Appearance</b>
+				<b>Crown Appearance</b><br>
 				In its creation, emplacement, and ultimate appearance your crown reflects our motto “The Art of Gentle Dentistry.”  We provide for your comfort in the procedure and for your dental health in a fully restored tooth.  And in artfully shaping and color matching your crown, we provide a truly resplendent tooth for your “Dream Smile.”
 			</p>
 			<p>
-				<b>More Information</b>
+				<b>More Information</b><br>
 				For more detailed descriptions of bonding, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg’s Dental Dictionary.  To learn if you might benefit from bonding, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
 			</p>			
 		</div>
