--- a/app/views/static_pages/dentalnexus.html.erb
+++ b/app/views/static_pages/dentalnexus.html.erb
@@ -1,13 +1,13 @@
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
-			Nexus of Dental & General Health
+			<h3>Nexus of Dental & General Health</h3>
 		</div>
 	</div>
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<p style="color: #0f53a5;">
 			Modern research is revealig a closer relationship between your dental health and general. The bacteria that cause preiodontal disease can reach far beyond the oral cavity and may affect these conditions:
 		</p>
@@ -18,7 +18,7 @@
 </div>
 
 <div class="row-fluid" style="text-align:center;">
-	<div class="span12">
+	<div class="span10 offset1">
 		<%= image_tag 'nexuschart.jpg' %>
 	</div>
 </div>
