--- a/app/views/static_pages/dreamsmilediet.html.erb
+++ b/app/views/static_pages/dreamsmilediet.html.erb
@@ -1,13 +1,13 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>TLC Dream Smile Diet</h3>
 			<p>
-				Attaining and maintaining your “Dream Smile” is dependent on a dental friendly diet best represented by the Healthy Eating Plate of Harvard’s School of Public Health and supplemented by TLC’s Dream Smile Diet tips.
+				Attaining and maintaining your “Dream Smile” is dependent on a dental friendly diet best represented by the Healthy Eating Plate of Harvard’s School of Public Health and supplemented by TLC’s Dream Smile Diet tips.<br>
 			</p>
 			<p>
-				Healthy Eating Plate and Dental Health
-				Your general health requires a well balanced and nutritional diet for which the Healthy Eating Plate provides the guidelines.
+				<b>Healthy Eating Plate and Dental Health</b><br>
+				Your general health requires a well balanced and nutritional diet for which the Healthy Eating Plate provides the guidelines.<br>
 			</p>
 			<div class="row-fluid" style="text-align:center;">
 				<div class="span12">
