--- a/app/views/static_pages/flouridetreatment.html.erb
+++ b/app/views/static_pages/flouridetreatment.html.erb
@@ -1,20 +1,20 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>TLC Flouride Treatment </h3>
 			<p>			
-				Fluoride is a mineral that is found naturally in air, water, soil, and foods such meat, fish, eggs, and tea. (( It also is found in city water systems, toothpastes, mouthwashes, pills and gels )) and it is essential to the formation and maintenance of healthy teeth.
+				Fluoride is a mineral that is found naturally in air, water, soil, and foods such meat, fish, eggs, and tea. (( It also is found in city water systems, toothpastes, mouthwashes, pills and gels )) and it is essential to the formation and maintenance of healthy teeth.<br>
 			</p>
 			<p>
-				Enamel, the outer layer of a tooth, is composed of dense mineral crystals that are continuously dissolved by acids formed by plaque bacteria in a process called demineralization.  In turn, minerals such as calcium and phosphate are continuously redeposited in the enamel and are facilitated and hardened by fluoride. Without this process of remineralization your teeth would decay.
+				Enamel, the outer layer of a tooth, is composed of dense mineral crystals that are continuously dissolved by acids formed by plaque bacteria in a process called demineralization.  In turn, minerals such as calcium and phosphate are continuously redeposited in the enamel and are facilitated and hardened by fluoride. Without this process of remineralization your teeth would decay.<br>
 			</p>
 			<p>
 				<b>Forms of Fluoride</b><br>
-				Fluoride is either topical or systemic in form.  Topical fluorides, including toothpastes, mouthwashes, and professional fluoride treatments, are applied directly to tooth enamel.  Systemic fluorides in food, water, and dietary supplements are ingested and provide dental benefits systemically. A combination of topical and systemic fluorides is deemed most beneficial by the American Dental Association.
+				Fluoride is either topical or systemic in form.  Topical fluorides, including toothpastes, mouthwashes, and professional fluoride treatments, are applied directly to tooth enamel.  Systemic fluorides in food, water, and dietary supplements are ingested and provide dental benefits systemically. A combination of topical and systemic fluorides is deemed most beneficial by the American Dental Association.<br>
 			</p>
 			<%= image_tag 'flouridetooth.jpg', :class => "float-right" %>
 			<p>
-			<b>Benefits of Fluoride</b>
+				<b>Benefits of Fluoride</b>
 			</p>
 			<ul>
 				<li>Remineralization</li>
@@ -26,14 +26,14 @@
 			</ul>
 			<p>
 				<b>Risks of Fluoride</b><br>
-				Normally fluoride is exceptionally beneficial but there can be too much of a good thing for in high doses it may be hazardous, particularly to children for who might develop fluorosis and teeth discoloration. This easily treatable condition largely results from children drinking well water with high fluoride levels or swallowing excessive amounts of toothpaste and/or supplementary pills It does not derive from municipal fluoridated water that has safe and strictly controlled levels of fluoridation.
+				Normally fluoride is exceptionally beneficial but there can be too much of a good thing for in high doses it may be hazardous, particularly to children for who might develop fluorosis and teeth discoloration. This easily treatable condition largely results from children drinking well water with high fluoride levels or swallowing excessive amounts of toothpaste and/or supplementary pills It does not derive from municipal fluoridated water that has safe and strictly controlled levels of fluoridation.<br>
 			</p>
 			<p>
 				<b>Fluoride Supplements and Treatments</b><br>
-				The dental health of some children and adults may require additional fluoride.  Children who have cavities, who are at high risk for cavities, or who do not drink fluoridated water might require fluoride supplements to avoid the risks of fluoride deficiency. 
+				The dental health of some children and adults may require additional fluoride.  Children who have cavities, who are at high risk for cavities, or who do not drink fluoridated water might require fluoride supplements to avoid the risks of fluoride deficiency. <br>
 			</p>
 			<p>
-			You might need additional fluoride if:
+				You might need additional fluoride if:
 			</p>
 			<ul>
 				<li>You are taking certain medications</li>
@@ -45,7 +45,7 @@
 				<li>You almost exclusively drink bottled or well water lacking fluoride</li>
 			</ul>
 			<p>
-				If you or any member of your family is subject to these risk factors, you should promptly contact TLC Dental for a consultation to determine whether fluoride supplements and/or treatments would be needed to provide for your dental health.
+				If you or any member of your family is subject to these risk factors, you should promptly contact TLC Dental for a consultation to determine whether fluoride supplements and/or treatments would be needed to provide for your dental health.<br>
 			</p>
 			<p>
 				<b>TLC Fluoride Treatment</b>
