--- a/app/views/static_pages/gentledentistry.html.erb
+++ b/app/views/static_pages/gentledentistry.html.erb
@@ -7,15 +7,15 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span5">
+				<div class="span8">			
 					<h3>The Art of Gentle Dentistry</h3>
 				</div>
-				<div class="span7">
-					<%= image_tag 'cowardlylion.jpg' %>
-				</div>
+ 				<div class="span4">
+ 					<%= image_tag 'cowardlylion.jpg', :class => "float-right" %>
+ 				</div>				
 			</div>
 			<p>
 				For more than a quarter of a century our calling card has been “We cater to dental cowards” and over this time our founder, Dr. Rothenberg, has set the Syracuse benchmark for gentle dentistry. Today, TLC draws on an array of resources to assure your dental comfort.
@@ -25,7 +25,7 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
 				<div class="span5">			
@@ -43,13 +43,13 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span5">			
+				<div class="span8">			
 					<h3>Comforting Ambiance</h3> 
 				</div>
-				<div class="span7">
+				<div class="span4">
 					<%= image_tag 'cowardlylion.jpg' %>
 				</div>
 			</div>
@@ -61,13 +61,13 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span5">			
+				<div class="span8">			
 					<h3>Comforting Amenities</h3>
 				</div>
-				<div class="span7">
+				<div class="span4">
 					<%= image_tag 'comfortingamenities.jpg' %>
 				</div>
 			</div>
@@ -79,13 +79,13 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span5">			
+				<div class="span8">			
 					<h3>Comforting Canine</h3>
 				</div>
-				<div class="span7">
+				<div class="span4">
 					<%= image_tag 'gentle_flossy.jpg' %>
 				</div>
 			</div>
@@ -97,13 +97,13 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span5">			
+				<div class="span8">			
 					<h3>Comforting Anesthetics</h3>
 				</div>
-				<div class="span7">
+				<div class="span4">
 					<%= image_tag 'flowers.jpg' %>
 				</div>
 			</div>
@@ -115,13 +115,13 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span5">			
+				<div class="span8">			
 					<h3>Comforting Sedation</h3>
 				</div>
-				<div class="span7">
+				<div class="span4">
 					<%= image_tag 'sedation.jpg' %>
 				</div>
 			</div>
@@ -133,13 +133,13 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span5">			
+				<div class="span8">			
 					<h3>Comforting Commitment</h3>
 				</div>
-				<div class="span7">
+				<div class="span4">
 					<%= image_tag 'beach.jpg' %>
 				</div>
 			</div>
