--- a/app/views/static_pages/greendentistry.html.erb
+++ b/app/views/static_pages/greendentistry.html.erb
@@ -7,13 +7,13 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span8 offset2">
 		<div class="green-content-container">
 			<div class="row-fluid">
-				<div class="span5">				
+				<div class="span6">				
 					<h3>The Environmental Challenge</h3>
 				</div>
-				<div class="span7">
+				<div class="span6">
 					<%= image_tag 'environmentchallenge.jpg' %>
 				</div>				
 			</div>				
@@ -25,13 +25,13 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span8 offset2">
 		<div class="green-content-container">
 			<div class="row-fluid">
-				<div class="span5">				
+				<div class="span6">				
 					<h3>Green Dental Society</h3>
 				</div>
-				<div class="span7">
+				<div class="span6">
 					<%= image_tag 'small_gds_seal.jpg' %>
 				</div>				
 			</div>				
@@ -43,13 +43,13 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span8 offset2">
 		<div class="green-content-container">
 			<div class="row-fluid">
-				<div class="span5">				
+				<div class="span6">				
 					<h3>Green Dental Society</h3>
 				</div>
-				<div class="span7">
+				<div class="span6">
 					<%= image_tag 'small_6R_logo.jpg' %>
 				</div>				
 			</div>					
@@ -100,13 +100,13 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span8 offset2">
 		<div class="green-content-container">
 			<div class="row-fluid">
-				<div class="span5">				
+				<div class="span7">				
 					<h3>The Green TLC Practice</h3>
 				</div>
-				<div class="span7">
+				<div class="span5">
 					<%= image_tag 'greenTLC.jpg' %>
 				</div>				
 			</div>				
