--- a/app/views/static_pages/implants.html.erb
+++ b/app/views/static_pages/implants.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Implants</h3> 
 			<p>
@@ -22,27 +22,27 @@
 			</ul>
 
 			<p>
-				<b>Implant Procedure</b>
+				<b>Implant Procedure</b><br>
 				In preparation for your implant the area of your missing tooth is carefully cleaned and examined for suitability and type of implant. In the most popular “root form implant,” an implant screw is embedded in the missing tooth site and temporarily capped.  After the bone has integrated with the implant in a process called osseointegration a post is affixed to the implant and a prosthesis in the form of a perfectly natural looking tooth is attached to the post.  For the prosthesis we make exacting measurements, molds, and color specifications that are sent to a highly specialized laboratory to assure a tooth of the highest quality.  When the prosthesis is complete, we adjust it for optimal comfort, chewing, and appearance prior to permanent attachment. 
 			</p>										
 			<p>
-				<b>Gentle Comfort</b>
+				<b>Gentle Comfort</b><br>
 				In the preparation and emplacement of your implanted tooth or teeth, you will enjoy the comfort of our signature “Gentle Dentistry.”
 			</p>			
 			<p>
-				<b>Implant Composition</b>
+				<b>Implant Composition</b><br>
 				The implant  is made of titanium, a metal that is best suited for osseointegration.  The tooth itself may be of ceramic material, a metal alloy such as gold, high grade porcelain, or high grade porcelain fused to a metal alloy.  The choice of composition is based on the location of the tooth and attendant dental and aesthetic considerations
 			</p>			
 			<p>
-				<b>Implant Durability</b>
+				<b>Implant Durability</b><br>
 				The durability of an implant, just like that of a normal tooth, is largely dependent on good dental hygiene and regular dental checkups.  With proper care, implants may last for many years. 
 			</p>
 			<p>
-				<b>Implant Appearance</b>
+				<b>Implant Appearance</b><br>
 				In its creation, emplacement, and ultimate appearance your implant reflects our motto “The Art of Gentle Dentistry.”  We provide for your comfort in the procedure and for your dental health in a completely functional replacement tooth or teeth.  And in artfully shaping and color matching your implanted tooth, we provide a truly resplendent new addition to your “Dream Smile.”
 			</p>
 			<p>
-				<b>More Information</b>
+				<b>More Information</b><br>
 				For more detailed descriptions of bonding, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg’s Dental Dictionary.  To learn if you might benefit from bonding, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
 			</p>			
 		</div>
