--- a/app/views/static_pages/newpatients.html.erb
+++ b/app/views/static_pages/newpatients.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>New Patients</h3>
 			<p>
@@ -13,7 +13,7 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>New Patient Forms</h3>
 			<p>
@@ -29,7 +29,7 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Insurance: We fight for your Dental Health </h3>
 			<p>
@@ -55,7 +55,7 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Payment Options</h3> <%= image_tag 'paymentoptions.jpg' %>
 			<p>
@@ -69,7 +69,7 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>New Patient Special Offer</h3>
 			<p>
@@ -80,7 +80,7 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Email Appointment</h3>
 			<p>
