--- a/app/views/static_pages/oralcancerscreening.html.erb
+++ b/app/views/static_pages/oralcancerscreening.html.erb
@@ -1,11 +1,13 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Oral Cancer Screening</h3>
 			<p>
-				Oral cancer is an abnormal growth of cells in the lips, tongue, mouth, and throat that may spread to other areas of the body.  It is a devastating and deadly cancer that often goes unnoticed until it has progressed to later stages.				
+				Oral cancer is an abnormal growth of cells in the lips, tongue, mouth, and throat that may spread to other areas of the body.  It is a devastating and deadly cancer that often goes unnoticed until it has progressed to later stages.<br>
 			</p>
-			<b>Statistics and Consequences of Oral Cancer are Humbling</b>
+			<p>
+				<b>Statistics and Consequences of Oral Cancer are Humbling</b>
+			</p>
 			<ul>
 				<li>Approximately 100 people in the U.S. are diagnosed with oral cancer every day</li>
 				<li>One person in the U.S. dies from oral cancer every hour</li>
@@ -13,14 +15,18 @@
 				<li>25% of all oral cancer victims have no risk factors</li>
 				<li>Devastating facial effects generally attend late stage oral cancer</li>
 			</ul>
-			<b>Treatment Options for Oral Cancer are Progressively Challenging</b>
+			<p>
+				<b>Treatment Options for Oral Cancer are Progressively Challenging</b>
+			</p>
 			<ul>
 				<li>Early stage treatment is usually limited to simple removal of the diseased tissue</li>
 				<li>If the diseased tissue is not treated early and is invasive, treatment may involve removing a large portion of the tongue, lower jaw, or throat</li>
 				<li>Treatment for later stage cancer that spreads to other areas of the body may involve chemotherapy, radiation, and surgical removal of tissue and organs</li>
 			</ul>	
 			<%= image_tag 'acs_logo.jpg', :class => "float-right" %>	
-			<b>Risk Factors for Oral Cancer</b>
+			<p>
+				<b>Risk Factors for Oral Cancer</b>
+			</p>
 			<ul>
 				<li>Previous history of oral cancer or precancerous lesions</li>
 				<li>Tobacco use at all ages (cigarettes, cigars, pipes, smokeless tobacco)</li>
@@ -32,19 +38,18 @@
 			</ul>
 			<p>
 				<b>Importance of Early Oral Cancer Detection</b><br>
-				As oral cancer is 90% curable when detected early and as later detection can hold grave consequences, you should immediately schedule a TLC oral cancer screening if you are subject to any of the above risk factors.  And as 25% of all oral cancer victims have no risk factors, you should schedule regular TLC “Recares” that include oral cancer screenings.
+				As oral cancer is 90% curable when detected early and as later detection can hold grave consequences, you should immediately schedule a TLC oral cancer screening if you are subject to any of the above risk factors.  And as 25% of all oral cancer victims have no risk factors, you should schedule regular TLC “Recares” that include oral cancer screenings.<br>
 			</p>
-
 			<p>
 				<b>TLC Oral Cancer Screening</b><br>
-				Although important, a visual oral cancer exam using just the eye fails to identify a majority of early lesions.  It should be supplemented by chemiluminescent technology that has proven clinically successful in identifying suspicious abnormalities in the earliest stages of development.
+				Although important, a visual oral cancer exam using just the eye fails to identify a majority of early lesions.  It should be supplemented by chemiluminescent technology that has proven clinically successful in identifying suspicious abnormalities in the earliest stages of development.<br>
 			</p>
 			<p>
-				That’s why at TLC Dental, we provide you with optimal oral cancer screening by using a combination of a careful visual examination and the ADA approved ViziLite Plus T Blue detection system. The latter begins with a desiccating (drying) pre-rinse that makes cell nuclei more visible to our special light.  A temporary and non-toxic blue dye is applied to suspicious areas.  The dye is retained only on lesions with active cells that are marked for further evaluation, monitoring, and diagnosis.
+				That’s why at TLC Dental, we provide you with optimal oral cancer screening by using a combination of a careful visual examination and the ADA approved ViziLite Plus T Blue detection system. The latter begins with a desiccating (drying) pre-rinse that makes cell nuclei more visible to our special light.  A temporary and non-toxic blue dye is applied to suspicious areas.  The dye is retained only on lesions with active cells that are marked for further evaluation, monitoring, and diagnosis.<br>
 			</p>
 			<p>
 				<b>Gentle Comfort</b><br>
-				During the brief oral cancer screening you will enjoy the comfort of our signature “Gentle Dentistry.” 
+				During the brief oral cancer screening you will enjoy the comfort of our signature “Gentle Dentistry.<br>” 
 			</p>
 			<p>
 				<b>More Information</b><br>
