--- a/app/views/static_pages/oralhygiene.html.erb
+++ b/app/views/static_pages/oralhygiene.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>TLC Oral Hygiene</h3>
 			<div class="row-fluid" style="margin-top:-100px;">
@@ -8,7 +8,7 @@
 				</div>
 			</div>
 			<p>
-				A program of good oral hygiene is to your “Dream Smile” as a good maintenance program is to your car.  It keeps everything working and looking great.  To further this analogy we might view dental plaque as the equivalent of automotive rust.  Absent proper cleaning, both will develop and then discolor, deteriorate, and destroy structural integrity.  In short, without a program of good care, a new car becomes a clunker; a Dream Smile becomes decay.  Only a combined personal and professional oral hygiene program can achieve and maintain your “Dream Smile”.
+				A program of good oral hygiene is to your “Dream Smile” as a good maintenance program is to your car.  It keeps everything working and looking great.  To further this analogy we might view dental plaque as the equivalent of automotive rust.  Absent proper cleaning, both will develop and then discolor, deteriorate, and destroy structural integrity.  In short, without a program of good care, a new car becomes a clunker; a Dream Smile becomes decay.  Only a combined personal and professional oral hygiene program can achieve and maintain your “Dream Smile”.<br>
 			</p>
 
 			<p>
@@ -25,21 +25,21 @@
 			</ul>
 			<p>
 				<b>The Advantages of TLC Rotadent Brushing</b><br>
-				The Rotadent has proven far more effective than any manual or electric toothbrush in maintaining dental health.  Click here to learn the many advantages of a Rotadent.
+				The Rotadent has proven far more effective than any manual or electric toothbrush in maintaining dental health.  Click here to learn the many advantages of a Rotadent.<br>
 			</p>
 			<%= image_tag 'rotadent.jpg', :class => "float-right" %>
 			<p>
 			<b>Manual Brushing</b>
 			</p>
 			<ul>
-				<li>If you use a manual toothbrush, it should have a small (1” to ½”) head with 		   soft, rounded bristles.</li>
+				<li>If you use a manual toothbrush, it should have a small (1” to ½”) head with soft, rounded bristles.</li>
 				<li>You should use a fluoride and tartar control toothpaste bearing the ADA seal of approval and, if recommended by TLC, a desensitizing toothpaste for	sensitive teeth. A pea s
 				<li>In brushing, you should hold your brush at a 45 degree angle and, beginning with the front or cheek side of your top teeth, gently brush up and down away from your gum line in small sections.  Rinse your brush after each section and proceed to your lower teeth and then to the tongue side of you teeth.</li>
 				<li>After brushing your teeth, you should brush your tongue.</li>
 				<li>You should replace your toothbrush every three to four months or sooner if the bristles lose structure and always replace it after a cold.</li>
 			</ul>
 			<p>
-			<b>Rinsing</b>
+				<b>Rinsing</b>
 			</p>
 			<ul>
 				<li>There are two types of rinses or mouthwashes that are used before or after brushing to address food particles, bacteria, fluoridation, and bad breath.</li>
@@ -47,7 +47,7 @@
 				<li>In rinsing, you should use the recommended amount of rinse, completely clear the rinse from your mouth, and after rinsing refrain from eating, drinking, or smoking for thirty minutes.</li>
 			</ul>
 			<p>
-			<b>How Often and How Long Should You Floss, Brush, and Rinse,</b>
+				<b>How Often and How Long Should You Floss, Brush, and Rinse,</b>
 			</p>
 				<ul>
 				<li>You should floss for 2 to 3 minutes after every meal and snack or at least twice a day.</li>
@@ -70,11 +70,11 @@
 			</p>
 			<p>
 				<b>TLC Recare</b><br>
-				Even the most exacting personal oral hygiene is not sufficient to protect your dental health and maintain your “Dream Smile”.  Only a trained hygienist with advanced professional equipment in a biannual or, if needed, more frequent Professional Dental Cleaning or “Recare” can perform the diagnostic, preventive, and aesthetic procedures that are essential for your dental health and “Dream Smile”. Indeed, without regular Recares you risk stains, gum disease, bone loss, and even oral cancer that cannot be detected and addressed by personal oral hygiene.  Click here for details on this vital dental procedure.  
+				Even the most exacting personal oral hygiene is not sufficient to protect your dental health and maintain your “Dream Smile”.  Only a trained hygienist with advanced professional equipment in a biannual or, if needed, more frequent Professional Dental Cleaning or “Recare” can perform the diagnostic, preventive, and aesthetic procedures that are essential for your dental health and “Dream Smile”. Indeed, without regular Recares you risk stains, gum disease, bone loss, and even oral cancer that cannot be detected and addressed by personal oral hygiene.  Click here for details on this vital dental procedure.<br>
 			</p>
 			<p>
 				<b>TLC Soft Tissue Management</b><br>
-				Much like the Recare, essential elements of our Soft Tissue Management system, including periodontal examinations, removal of tartar and calculus through scaling and root planing with the Cavitron Jet Plus, and Arestin and fluoride treatments cannot be achieved through personal oral hygiene.  The health of your teeth and gum tissues depends on both good personal oral hygiene and STM.   Click here for details on this important dental system.
+				Much like the Recare, essential elements of our Soft Tissue Management system, including periodontal examinations, removal of tartar and calculus through scaling and root planing with the Cavitron Jet Plus, and Arestin and fluoride treatments cannot be achieved through personal oral hygiene.  The health of your teeth and gum tissues depends on both good personal oral hygiene and STM.   Click here for details on this important dental system.<br>
 			</p>
 			<p>
 				<b>More Information</b><br>
