--- a/app/views/static_pages/rotadent.html.erb
+++ b/app/views/static_pages/rotadent.html.erb
@@ -1,20 +1,17 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>TLC Rotadent Toothbrush</h3>
 			<p>
-				The TLC Rotadent Toothbrush made by Zila is a professional dental instrument that is available only through dentists. It is a perfect complement to our Recare and STM programs as it uniquely and effectively militates against preiodontal disease, cavities, and tooth discoloration.
+				The TLC Rotadent Toothbrush made by Zila is a professional dental instrument that is available only through dentists. It is a perfect complement to our Recare and STM programs as it uniquely and effectively militates against preiodontal disease, cavities, and tooth discoloration.<br>
 			</p>
 			<p>
 				<b>Distinctive Features</b>
 			</p>
 			<ul>
 				<li>Designed to protect and preserve normal teeth as well as veneers, bondings, crowns, bridges, implants, and braces.</li>
-
 				<li>A rotary brush head provides 360 degree sweeping action at a speed of </li>
-
 				<li>Proprietary MicroAccess filaments offer unrivaled reach below the gum line and into tight spaces to treat and prevent periodontal disease</li>
-
 				<li>Three bush heads <br>
 						Hollow - for cleaning, polishing, and delivery of medications<br>
 						Short - for cleaning and polishing, particularly around braces<br>
@@ -37,19 +34,19 @@
 			</ul>
 			<%= image_tag 'rotadentbristle.jpg', :class => "float-left" %>
 			<p>
-				The proprietary MicroAccess filaments on the Rotadent®  fit into tight interproximal spaces that conventional brushes can’t reach. These filaments, along with the 360-degree sweeping action — a feature only found on the Rotadent®  — clean out plaque and bacteria from these difficult-to-reach areas.
+				The proprietary MicroAccess filaments on the Rotadent®  fit into tight interproximal spaces that conventional brushes can’t reach. These filaments, along with the 360-degree sweeping action — a feature only found on the Rotadent®  — clean out plaque and bacteria from these difficult-to-reach areas.<br><br>	
 			</p>
 			<p>
 				<b>TLC Rotadent vs. Drugstore Electric Toothbrushes</b><br>
-				The comparison between a TLC Rotadent and a drugstore electric toothbrush is akin to that of a TLC tooth whitening and a drugstore tooth whitening.  There is simply no comparison.   The TLC Rotadent dramatically outperforms any drugstore electric toothbrush as evidenced by this video.
+				The comparison between a TLC Rotadent and a drugstore electric toothbrush is akin to that of a TLC tooth whitening and a drugstore tooth whitening.  There is simply no comparison.   The TLC Rotadent dramatically outperforms any drugstore electric toothbrush as evidenced by this video.<br>
 			</p>
 			<p>
 				<b>Lifetime Warranty</b><br>
-				Further attesting to the disparity in quality and performance between a TLC Rotadent and a drugstore electric toothbrush is the limited Lifetime Warranty that you enjoy with a TLC Rotadent.
+				Further attesting to the disparity in quality and performance between a TLC Rotadent and a drugstore electric toothbrush is the limited Lifetime Warranty that you enjoy with a TLC Rotadent.<br>
 			</p>
 			<p>
 				<b>Maintain Your Dental Health and Dream Smile</b><br>
-				Because of its exceptional cleaning capacity for teeth and gums the TLC Rotadent is the centerpiece of TLC Dental’s Soft Tissue Management Program that enables you to attain and maintain your dental health.  And in this way it contributes invaluably to your “Dream Smile”.
+				Because of its exceptional cleaning capacity for teeth and gums the TLC Rotadent is the centerpiece of TLC Dental’s Soft Tissue Management Program that enables you to attain and maintain your dental health.  And in this way it contributes invaluably to your “Dream Smile”.<br>
 			</p>
 			<p>
 				<b>More Information</b><br>
