--- a/app/views/static_pages/sleepapnea.html.erb
+++ b/app/views/static_pages/sleepapnea.html.erb
@@ -1,12 +1,14 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Sleep Apnea</h3>
 			<p>
-				Sleep apnea is a serious sleeping disorder affecting some 18 million Americans whose sleep is disrupted by brief periods in which they stop breathing.  Each of these periods lasts ten or more seconds and occurs ten to sixty times during a night’s sleep. There are two types of sleep apnea.  In obstructive sleep apnea, the most common type, the throat airway closes briefly while breathing efforts continue.  In central sleep apnea the airway is not blocked but the brain temporarily fails to signal the muscles to breathe normally.<br><br>
-
-				Although not proven causal, the following are risk factors for sleep apnea: physical abnormality in the nose and throat, high blood pressure, obesity, and the use of tobacco, alcohol, sedatives, and certain medicines.<br><br>
-
+				Sleep apnea is a serious sleeping disorder affecting some 18 million Americans whose sleep is disrupted by brief periods in which they stop breathing.  Each of these periods lasts ten or more seconds and occurs ten to sixty times during a night’s sleep. There are two types of sleep apnea.  In obstructive sleep apnea, the most common type, the throat airway closes briefly while breathing efforts continue.  In central sleep apnea the airway is not blocked but the brain temporarily fails to signal the muscles to breathe normally.<br>
+			</p>	
+			<p>
+				Although not proven causal, the following are risk factors for sleep apnea: physical abnormality in the nose and throat, high blood pressure, obesity, and the use of tobacco, alcohol, sedatives, and certain medicines.<br>
+			</p>
+			<p>
 				If sleep apnea is left untreated its consequences may be grave and life threatening, including daytime lethargy and sleepiness, depression, high blood pressure, diabetes, heart attack, and stroke. 	
 			</p>
 			<%= image_tag 'sleepapnea.jpg', :class => "float-right" %>
@@ -20,14 +22,16 @@
 				<li>Insomnia</li>
 			</ul>
 			<p>	
-				Should you experience any of these symptoms, it is important that you promptly see TLC Dental for diagnosis and treatment.  We will review your medical history and symptoms and will conduct a thorough examination to assess the nature of your sleep apnea.  We will then coordinate with a sleep specialist in providing you with a personal and diverse treatment program to relieve your sleep apnea.<br><br>
-				
+				Should you experience any of these symptoms, it is important that you promptly see TLC Dental for diagnosis and treatment.  We will review your medical history and symptoms and will conduct a thorough examination to assess the nature of your sleep apnea.  We will then coordinate with a sleep specialist in providing you with a personal and diverse treatment program to relieve your sleep apnea.<br>
+			</p>
 				<%= image_tag 'wisdomtooth.jpg', :class => "float-left" %>
-
-				This treatment program may include a Somnodent custom made device that comfortably resolves sleep apnea symptoms for many patients.  For more information on the Somnodent click here.<br><br>
-
-				Throughout your examination and treatment you will enjoy the comfort of our signature “Gentle Dentistry.”<br><br>
-
+			<p>
+				This treatment program may include a Somnodent custom made device that comfortably resolves sleep apnea symptoms for many patients.  For more information on the Somnodent click here.<br>
+			</p>
+			<p>
+				Throughout your examination and treatment you will enjoy the comfort of our signature “Gentle Dentistry.”<br>
+			</p>
+			<p>
 				For more information on sleep apnea, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg's Dental Dictionary.  And for prompt treatment and alleviation of sleep apnea symptoms, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.  
 			</p>									
 		</div>
