--- a/app/views/static_pages/snaponsmile.html.erb
+++ b/app/views/static_pages/snaponsmile.html.erb
@@ -1,19 +1,22 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>TLC Snap-On Smile</h3> <h4>A perfect smile <br> & <br> A dream come true</h4> 
 			<b>Those Special Moments</b>
 			<p>
 				Are there moments when you dream of a perfect smile but don’t have the time or funds for a complete dental makeover?<br>
-
+			</p>
+			<p>
 				Moments such as celebrations, graduations, weddings, proms, parties, dates, dinners, reunions, and interviews when a perfect smile would make a moment perfect.<br> 
-
+			</p>
+			<p>
 				If so, TLC’s Snap-On Smile is your dream come true. 
 			</p>
-			<b>What is a TLC Snap-On Smile</b>
 			<p>
+				<b>What is a TLC Snap-On Smile</b><br>
 				A TLC Snap-On Smile is a set of perfect teeth made of ultra-modern dental resin that quickly, easily, comfortably, and securely fits over your own teeth without any adhesives to immediately give you a radiant smile.<br>
-
+			</p>
+			<p>
 				The TLC Snap-On Smile was designed by a renowned dentist after years of research and development to give you perfect teeth with which to eat, drink, talk, laugh, and smile normally.  Although very thin and lightweight, it is also remarkably strong.  It fits snuggly over your teeth like a glove and is easy to snap on and off.
 			</p>
 			<%= image_tag 'snaponsmile.jpg', :class => "float-right" %>	
@@ -31,29 +34,29 @@
 				<li>A lack of cordiality and confidence from an unsightly smile</li>
 				<li>Pressing need for a perfect smile that’s quick, easy, and inexpensive</li>
 			</ul>
-			<b>What is the Procedure for a TLC Snap-On Smile</b>
 			<p>
-				The procedure for a Snap-On Smile is simple, quick, and easy.  We first conduct a brief examination to confirm your suitability for a Snap-on Smile and carefully review the desired style and shade of your smile.  We then take exact measurements and impressions of your teeth that are sent to a highly specialized laboratory for preparation of your Smile.   When you return for a final fitting, we adjust the Snap-On Smile for optimal comfort, chewing, and appearance; provide you with a cleaning kit and instructions; and in a snap, you have a dazzling “Dream Smile”.
+				<b>What is the Procedure for a TLC Snap-On Smile</b>
+				The procedure for a Snap-On Smile is simple, quick, and easy.  We first conduct a brief examination to confirm your suitability for a Snap-on Smile and carefully review the desired style and shade of your smile.  We then take exact measurements and impressions of your teeth that are sent to a highly specialized laboratory for preparation of your Smile.   When you return for a final fitting, we adjust the Snap-On Smile for optimal comfort, chewing, and appearance; provide you with a cleaning kit and instructions; and in a snap, you have a dazzling “Dream Smile”.<br>
 			</p>									
 			<p>
 				<b>Gentle Comfort</b><br>
-				In the preparation of your Snap-On Smile, you will enjoy the comfort of our signature “Gentle Dentistry.”
+				In the preparation of your Snap-On Smile, you will enjoy the comfort of our signature “Gentle Dentistry.”<br>
 			</p>				
 			<p>
 				<b>TLC Snap-On Smile Durability</b><br>
-				With proper care, your Snap-On Smile will last for several years in much the same way as Partial Dentures and Night Guards.  
+				With proper care, your Snap-On Smile will last for several years in much the same way as Partial Dentures and Night Guards. <br>
 			</p>
 			<p>
 				<b>TLC Snap-On Smile Experience</b><br>
-				The Snap-On Smile reflects our motto: “The Art of Gentle Dentistry.”  We provide for your comfort throughout the procedure and for your dental health in a completely functional set of teeth.  And in artfully shaping and color coding your model, we make your Dream Smile come true.
+				The Snap-On Smile reflects our motto: “The Art of Gentle Dentistry.”  We provide for your comfort throughout the procedure and for your dental health in a completely functional set of teeth.  And in artfully shaping and color coding your model, we make your Dream Smile come true.<br>
 			</p>
 			<p>
 				<b>Why is a TLC Dental Snap-On Smile Recommended</b><br>
-				Because of its distinction in embracing dental innovation and its more than 30 years of experience in serving local families who deem it the premier dental practice in Greater Syracuse, TLC Dental Group is the only dental practice in Greater Syracuse that is recommended by snaponsmile.com, the official web site of Snap-On Smile.
+				Because of its distinction in embracing dental innovation and its more than 30 years of experience in serving local families who deem it the premier dental practice in Greater Syracuse, TLC Dental Group is the only dental practice in Greater Syracuse that is recommended by snaponsmile.com, the official web site of Snap-On Smile.<br>
 			</p>			
 			<p>
 				<b>More Information</b><br>
-				For more detailed descriptions of bonding, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg’s Dental Dictionary.  To learn if you might benefit from bonding, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.
+				For more detailed descriptions of bonding, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg’s Dental Dictionary.  To learn if you might benefit from bonding, please call the TLC Dental Group Fayetteville / Manlius office at (315)-637-7684.<br>
 			</p>			
 		</div>
 	</div>
