--- a/app/views/static_pages/softtissue.html.erb
+++ b/app/views/static_pages/softtissue.html.erb
@@ -1,9 +1,9 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>TLC Soft Tissue Management</h3>
 			<p>
-				TLC Soft Tissue Management (STM) is a professional and personal system developed for early detection, diagnosis, treatment, and maintenance of periodontal disease.  Its regular re-evaluations and periodontal maintenance are designed to prevent tooth loss and the need for periodontal surgery.
+				TLC Soft Tissue Management (STM) is a professional and personal system developed for early detection, diagnosis, treatment, and maintenance of periodontal disease.  Its regular re-evaluations and periodontal maintenance are designed to prevent tooth loss and the need for periodontal surgery.<br>
 			</p>
 			<p>
 				It comprises the following two elements:
@@ -34,7 +34,7 @@
 			</ul>
 			<p>
 				<b>Goal of TLC Soft Tissue Management</b><br>
-				In creating a personal STM program we share a common goal of providing for your periodontal health and preventing surgery and tooth loss, the results of untreated periodontal disease.
+				In creating a personal STM program we share a common goal of providing for your periodontal health and preventing surgery and tooth loss, the results of untreated periodontal disease.<br>
 			</p>
 				<p>
 				<b>More Information</b><br>
