--- a/app/views/static_pages/tabaccocessationprogram.html.erb
+++ b/app/views/static_pages/tabaccocessationprogram.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>TLC Tobacco Cessation Program</h3>
 			<p>
@@ -27,22 +27,21 @@
 				<li>Diminished sense of taste and smell </li>
 			</ul>
 			<p>
-				This list extends to an even longer list of problems throughout the body that may result in chemotherapy and organ removal. And the list further extends to one of adverse affects on children, unborn children, family members, and friends.
+				This list extends to an even longer list of problems throughout the body that may result in chemotherapy and organ removal. And the list further extends to one of adverse affects on children, unborn children, family members, and friends.<br>
 			</p>
 			<p>
 				<b>The Hold of Tobacco</b><br>
 				Mark Twain once said: “Quitting smoking is easy.  I’ve done it a thousand times.”
-				Quitting the use of tobacco is, of course, not easy because all forms of it: cigarettes, cigars, pipes, and smokeless, contain nicotine that is capable of causing addiction and dependence. 
+				Quitting the use of tobacco is, of course, not easy because all forms of it: cigarettes, cigars, pipes, and smokeless, contain nicotine that is capable of causing addiction and dependence.<br>
 			</p>
 			<p>
 				<b>TLC Tobacco Cessation Assistance</b><br>
-				TLC Dental is well positioned to assist you in quitting the use of tobacco because its ill effects often appear first in the mouth.  We can offer you a wealth of resources provided by the American Dental Association to counter tobacco use   and we can develop a program to fit your personal needs, including prescriptive medications and referrals to local support groups and specialists in anti-tobacco treatment.
+				TLC Dental is well positioned to assist you in quitting the use of tobacco because its ill effects often appear first in the mouth.  We can offer you a wealth of resources provided by the American Dental Association to counter tobacco use   and we can develop a program to fit your personal needs, including prescriptive medications and referrals to local support groups and specialists in anti-tobacco treatment.<br>
 			</p>
 			<p>
 				<b>More Information</b><br>
 				For more information on tobacco cessation, click on Dr. Rothenberg’s Dental Encyclopedia. And for a personal Tobacco Cessation Program, please call the TLC Dental Group, Fayetteville / Manlius office at 315-637-7684. 
 			</p>
-
 		</div>
 	</div>
 </div>
