--- a/app/views/static_pages/veneers.html.erb
+++ b/app/views/static_pages/veneers.html.erb
@@ -1,9 +1,9 @@
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Veneers</h3>
 			<p>
-				Veneers are ultra-thin shells of porcelain that are bonded to the front surface of teeth to dramatically improve dental appearance.  They are a simple, comfortable, and popular way to cover imperfections and achieve a radiant smile.
+				Veneers are ultra-thin shells of porcelain that are bonded to the front surface of teeth to dramatically improve dental appearance.  They are a simple, comfortable, and popular way to cover imperfections and achieve a radiant smile.<br>
 			</p>
 			<%= image_tag 'veneer.jpg', :class => "float-right" %>	
 			<b>Veneers</b>
@@ -21,8 +21,9 @@
 			</ul>
 			<b>Veneer Procedure</b><br>
 			<p>
-				Veneers are a two step procedure at TLC Dental.  Initially, we discuss your desired dental enhancements and carefully examine your teeth to establish their suitability for veneers. We then prepare the designated teeth, make exacting measurements and molds for fabrication of the veneers by a highly specialized laboratory, and fit you with temporary veneers.<br>
-
+				Veneers are a two step procedure at TLC Dental.  Initially, we discuss your desired dental enhancements and carefully examine your teeth to establish their suitability for veneers. We then prepare the designated teeth, make exacting measurements and molds for fabrication of the veneers by a highly specialized laboratory, and fit you with temporary veneers.
+			</p>
+			<p>
 				In your second visit, we meticulously prepare the teeth, the translucent veneers, and the color imparting cement for your desired fit and color, and emplace your truly transformative veneers.
 			</p>									
 			<p>
